# FreeCAD

./: .gitignore  README.md
src/Mod/SoundTest/: CMakeLists.txt  Makefile.Debug  Makefile.Release  SoundTestGuiPy.cpp  SoundTestView.cpp  SoundTestView.h  WidgetSoundTest.cpp  WidgetSoundTest.h  WidgetSoundTest.ui  WidgetSoundTest3.ui  add2.py  analysis.cpp  analysis.h  calibration.cpp  calibration.h  config.cpp  corr.cpp  corr.h  device.cpp  device.h  fft_test.py  inputdata.cpp  inputdata.h  iputils.cpp  iputils.h  oscilloscope.cpp  oscilloscope.h  oscilloscopeethenet.cpp  oscilloscopeethenet.h  oscilloscopeplot.cpp  oscilloscopeplot.h  oscilloscopeserial.cpp  oscilloscopeserial.h  plotutils.cpp  plotutils.h  res.qrc  sound_test_window.pro  writeFile.xml
src/Mod/SoundTest/TDM_C_DLL/dev/include/: nilibddc.h
src/Mod/SoundTest/TDM_C_DLL/doc/: nilibddc.chm
src/Mod/SoundTest/TDM_C_DLL/redist/32-bit/: nilibddc.msm  niusiemb.msm
src/Mod/SoundTest/TDM_C_DLL/redist/64-bit/: nilibddc_x64.msm  niusiemb_x64.msm
src/Mod/SoundTest/TDM_C_DLL/samples/: readFile.c  writeFile.c
src/Mod/SoundTest/libtdms-gpl-0.5/: CHANGES.txt  Doxyfile  Makefile.borland  Makefile.win  README.txt  libtdms.pro
src/Mod/SoundTest/libtdms-gpl-0.5/include/: TdmsChannel.h  TdmsGroup.h  TdmsLeadIn.h  TdmsMetaData.h  TdmsObject.h  TdmsParser.h  TdmsSegment.h
src/Mod/SoundTest/libtdms-gpl-0.5/src/: TdmsChannel.cpp  TdmsGroup.cpp  TdmsLeadIn.cpp  TdmsMetaData.cpp  TdmsObject.cpp  TdmsParser.cpp  TdmsSegment.cpp
src/Mod/SoundTest/libtdms-gpl-0.5/tdmsreader/: Makefile.borland  Makefile.win  main.cpp  tdmsreader.pro
src/Mod/SoundTest/matlab_files/: Data1.m  Data2.m  ad7134.m  adp2302.m  adp2311.m  adp2312_adp7118.m  adp5070.m  adp5073.m  analysis.m  analysis2.m  analysis3.m  analysis4.m  auto_corr_analysis.m  auto_corr_analysis.prj  auto_corr_test.m  band_noise_average.m  chuanshuxian.asv  chuanshuxian.m  corr_test.m  cpsd_analysis.m  cpsd_analysis.prj  cpsd_test.asv  cpsd_test.m  daopu_analysis.m  daopu_analysis.prj  daopu_test.m  data0.m  data10.m  data20.m  data60.m  data_hou_0_ch1.m  data_hou_0_ch2.m  data_hou_10_ch1.m  dongtaifanwei.m  fenxi1.m  fenxi2.m  fenxi3.m  fenxi4.m  fenxi5.m  fenxi6.m  (+52 more)
src/Mod/SoundTest/matlab_files/codegen/dll/cpsd_analysis/: FFTImplementationCallback.cpp  FFTImplementationCallback.h  bsxfun.cpp  bsxfun.h  codedescriptor.dmr  computeDFT.cpp  computeDFT.h  computepsd.cpp  computepsd.h  cpsd_analysis.cpp  cpsd_analysis.h  cpsd_analysis_data.cpp  cpsd_analysis_data.h  cpsd_analysis_initialize.cpp  cpsd_analysis_initialize.h  cpsd_analysis_rtw.mk  cpsd_analysis_rtwutil.cpp  cpsd_analysis_rtwutil.h  cpsd_analysis_spec.h  cpsd_analysis_terminate.cpp  cpsd_analysis_terminate.h  cpsd_analysis_types.h  psdfreqvec.cpp  psdfreqvec.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  welch.cpp  welch.h
src/Mod/SoundTest/matlab_files/codegen/dll/daopu_analysis/: FFTImplementationCallback.cpp  FFTImplementationCallback.h  codedescriptor.dmr  daopu_analysis.cpp  daopu_analysis.h  daopu_analysis_data.cpp  daopu_analysis_data.h  daopu_analysis_initialize.cpp  daopu_analysis_initialize.h  daopu_analysis_rtw.bat  daopu_analysis_rtw.mk  daopu_analysis_spec.h  daopu_analysis_terminate.cpp  daopu_analysis_terminate.h  daopu_analysis_types.h  ifft.cpp  ifft.h  rtwtypes.h
src/Mod/SoundTest/matlab_files/codegen/dll/onethird/: FFTImplementationCallback.cpp  FFTImplementationCallback.h  codedescriptor.dmr  fft.cpp  fft.h  ifft.cpp  ifft.h  onethird.cpp  onethird.h  onethird_data.cpp  onethird_data.h  onethird_initialize.cpp  onethird_initialize.h  onethird_rtw.bat  onethird_rtw.mk  onethird_spec.h  onethird_terminate.cpp  onethird_terminate.h  onethird_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
src/Mod/SoundTest/matlab_files/codegen/dll/pingpu/: FFTImplementationCallback.cpp  FFTImplementationCallback.h  codedescriptor.dmr  pingpu.cpp  pingpu.h  pingpu_data.cpp  pingpu_data.h  pingpu_initialize.cpp  pingpu_initialize.h  pingpu_rtw.mk  pingpu_spec.h  pingpu_terminate.cpp  pingpu_terminate.h  pingpu_types.h  rtwtypes.h
src/Mod/SoundTest/matlab_files/codegen/dll/psd_analysis/: FFTImplementationCallback.cpp  FFTImplementationCallback.h  bsxfun.cpp  bsxfun.h  codedescriptor.dmr  computeDFT.cpp  computeDFT.h  computeperiodogram.cpp  computeperiodogram.h  psd_analysis.cpp  psd_analysis.h  psd_analysis_data.cpp  psd_analysis_data.h  psd_analysis_initialize.cpp  psd_analysis_initialize.h  psd_analysis_rtw.bat  psd_analysis_rtw.mk  psd_analysis_spec.h  psd_analysis_terminate.cpp  psd_analysis_terminate.h  psd_analysis_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
src/Mod/SoundTest/matlab_files/codegen/dll/time_anslysis/: codedescriptor.dmr  combineVectorElements.cpp  combineVectorElements.h  mean.cpp  mean.h  minOrMax.cpp  minOrMax.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  time_anslysis.cpp  time_anslysis.h  time_anslysis_data.cpp  time_anslysis_data.h  time_anslysis_initialize.cpp  time_anslysis_initialize.h  time_anslysis_rtw.bat  time_anslysis_rtw.mk  time_anslysis_spec.h  time_anslysis_terminate.cpp  time_anslysis_terminate.h  time_anslysis_types.h
src/Mod/SoundTest/matlab_files/codegen/lib/auto_corr_analysis/: FFTImplementationCallback.cpp  FFTImplementationCallback.h  auto_corr_analysis.cpp  auto_corr_analysis.h  auto_corr_analysis_data.cpp  auto_corr_analysis_data.h  auto_corr_analysis_initialize.cpp  auto_corr_analysis_initialize.h  auto_corr_analysis_rtw.bat  auto_corr_analysis_rtw.mk  auto_corr_analysis_terminate.cpp  auto_corr_analysis_terminate.h  auto_corr_analysis_types.h  codedescriptor.dmr  defines.txt  fft.cpp  fft.h  ifft.cpp  ifft.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
src/Mod/SoundTest/matlab_files/codegen/lib/cpsd_analysis/: bsxfun.cpp  (+41 more)
src/Mod/SoundTest/python_files/: main.py
(+260 files in other folders)
